DeploySimpleEnvironment/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.4.1272.37030",
      "templateHash": "4417729125235423860"
    }
  },
  "parameters": {
    "virtualMachines_VM_WINDOWS_name": {
      "type": "string",
      "defaultValue": "VM-WINDOWS"
    },
    "networkInterface_VM_Windows_Name": {
      "type": "string",
      "defaultValue": "networkInterface-vm-windows001"
    },
    "publicIP_VM_Windows_Name": {
      "type": "string",
      "defaultValue": "publicIP-VM-WINDOWS"
    },
    "NSG_Name": {
      "type": "string",
      "defaultValue": "nsg-SimpleEnvironment"
    },
    "VNET_simpleDeploy": {
      "type": "string",
      "defaultValue": "RG_ADMIN_TestDeployements-vnet"
    },
    "location": {
      "type": "string",
      "defaultValue": "francecentral"
    },
    "adminUserName": {
      "type": "string",
      "defaultValue": "azureuser"
    },
    "adminPassword": {
      "type": "secureString"
    },
    "owner": {
      "type": "string"
    },
    "approver": {
      "type": "string"
    },
    "endDate": {
      "type": "string"
    }
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-11-01",
      "name": "[parameters('NSG_Name')]",
      "location": "[parameters('location')]",
      "tags": {
        "owner": "[parameters('owner')]",
        "approver": "[parameters('approver')]",
        "endDate": "[parameters('endDate')]"
      },
      "properties": {
        "securityRules": [
          {
            "name": "SSH_FE_BE",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceApplicationSecurityGroups": [
                {
                  "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', 'FrontEndServer')]",
                  "location": "[parameters('location')]"
                }
              ],
              "destinationPortRange": "22",
              "destinationApplicationSecurityGroups": [
                {
                  "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', 'BackEndServer')]",
                  "location": "[parameters('location')]"
                }
              ],
              "access": "Allow",
              "priority": 310,
              "direction": "Inbound"
            }
          },
          {
            "name": "RDP_Inbound",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationApplicationSecurityGroups": [
                {
                  "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', 'FrontEndServer')]",
                  "location": "[parameters('location')]"
                }
              ],
              "access": "Allow",
              "priority": 300,
              "direction": "Inbound"
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/applicationSecurityGroups', 'BackEndServer')]",
        "[resourceId('Microsoft.Network/applicationSecurityGroups', 'FrontEndServer')]"
      ]
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2020-11-01",
      "name": "[parameters('publicIP_VM_Windows_Name')]",
      "location": "[parameters('location')]",
      "tags": {
        "owner": "[parameters('owner')]",
        "approver": "[parameters('approver')]",
        "endDate": "[parameters('endDate')]"
      },
      "sku": {
        "name": "Basic",
        "tier": "Regional"
      },
      "properties": {
        "publicIPAddressVersion": "IPv4",
        "publicIPAllocationMethod": "Dynamic",
        "idleTimeoutInMinutes": 4
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2020-11-01",
      "name": "[parameters('VNET_simpleDeploy')]",
      "location": "[parameters('location')]",
      "tags": {
        "owner": "[parameters('owner')]",
        "approver": "[parameters('approver')]",
        "endDate": "[parameters('endDate')]"
      },
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.3.0.0/16"
          ]
        },
        "subnets": [
          {
            "name": "default",
            "properties": {
              "addressPrefix": "10.3.0.0/24",
              "delegations": [],
              "privateEndpointNetworkPolicies": "Enabled",
              "privateLinkServiceNetworkPolicies": "Enabled"
            }
          }
        ],
        "virtualNetworkPeerings": [],
        "enableDdosProtection": false
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2021-11-01",
      "name": "[parameters('virtualMachines_VM_WINDOWS_name')]",
      "location": "[parameters('location')]",
      "tags": {
        "owner": "[parameters('owner')]",
        "approver": "[parameters('approver')]",
        "endDate": "[parameters('endDate')]"
      },
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_B2s"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "MicrosoftWindowsServer",
            "offer": "WindowsServer",
            "sku": "2019-datacenter-gensecond",
            "version": "latest"
          },
          "osDisk": {
            "osType": "Windows",
            "name": "[format('{0}_OSdisk', parameters('virtualMachines_VM_WINDOWS_name'))]",
            "createOption": "FromImage",
            "caching": "ReadWrite",
            "managedDisk": {
              "id": "[resourceId('Microsoft.Compute/disks', format('{0}_disk1_3a5192f7d0d44d94a2b0df55ac16ad75', parameters('virtualMachines_VM_WINDOWS_name')))]"
            },
            "deleteOption": "Delete"
          },
          "dataDisks": []
        },
        "osProfile": {
          "computerName": "[parameters('virtualMachines_VM_WINDOWS_name')]",
          "adminUsername": "[parameters('adminUserName')]",
          "adminPassword": "[parameters('adminPassword')]",
          "windowsConfiguration": {
            "provisionVMAgent": true,
            "enableAutomaticUpdates": true,
            "patchSettings": {
              "patchMode": "AutomaticByOS",
              "assessmentMode": "ImageDefault",
              "enableHotpatching": false
            }
          },
          "secrets": [],
          "allowExtensionOperations": true,
          "requireGuestProvisionSignal": true
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterface_VM_Windows_Name'))]",
              "properties": {
                "deleteOption": "Delete"
              }
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterface_VM_Windows_Name'))]"
      ]
    },
    {
      "type": "Microsoft.Network/applicationSecurityGroups",
      "apiVersion": "2021-05-01",
      "name": "FrontEndServer",
      "location": "[parameters('location')]"
    },
    {
      "type": "Microsoft.Network/applicationSecurityGroups",
      "apiVersion": "2021-05-01",
      "name": "BackEndServer",
      "location": "[parameters('location')]"
    },
    {
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2020-11-01",
      "name": "[format('{0}/{1}', parameters('VNET_simpleDeploy'), 'default')]",
      "properties": {
        "addressPrefix": "10.3.0.0/24",
        "delegations": [],
        "privateEndpointNetworkPolicies": "Enabled",
        "privateLinkServiceNetworkPolicies": "Enabled"
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('VNET_simpleDeploy'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2020-11-01",
      "name": "[parameters('networkInterface_VM_Windows_Name')]",
      "location": "[parameters('location')]",
      "tags": {
        "owner": "[parameters('owner')]",
        "approver": "[parameters('approver')]",
        "endDate": "[parameters('endDate')]"
      },
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIP_VM_Windows_Name'))]"
              },
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('VNET_simpleDeploy'), 'default')]"
              },
              "primary": true,
              "privateIPAddressVersion": "IPv4",
              "applicationSecurityGroups": [
                {
                  "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', 'FrontEndServer')]"
                },
                {
                  "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', 'BackEndServer')]"
                }
              ]
            }
          }
        ],
        "dnsSettings": {
          "dnsServers": []
        },
        "enableAcceleratedNetworking": false,
        "enableIPForwarding": false,
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSG_Name'))]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/applicationSecurityGroups', 'BackEndServer')]",
        "[resourceId('Microsoft.Network/applicationSecurityGroups', 'FrontEndServer')]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSG_Name'))]",
        "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIP_VM_Windows_Name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('VNET_simpleDeploy'), 'default')]"
      ]
    }
  ]
}
